--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokei = {git = "https://github.com/XAMPPRocky/tokei"}
+tokei = {git = "https://github.com/XAMPPRocky/tokei", branch = "master"}
 colored = "2.0"
 num-format = "0.4"
 serde = "1.0"
